--- a/src/App.css
+++ b/src/App.css
@@ -99,3 +99,21 @@ a {
 .headerItems > p {
   margin: 10px;
 }
+
+.headerIcons {
+  display: flex;
+}
+.headerIcons > div {
+  margin: 10px;
+}
+.themeSwitchContainer {
+  display: flex;
+  background-color: #1c1c1e;
+  border-radius: 50px;
+  padding: 15px;
+  justify-content: center;
+  align-items: center;
+}
+.themeImage {
+  height: 25px;
+}
