--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,7 @@ a {
   height: 100px;
   display: flex;
   justify-content: space-between;
-  align-items: cetner;
+  align-items: center;
 }
 .header > div {
   margin: 10px;
@@ -116,4 +116,13 @@ a {
 }
 .themeImage {
   height: 25px;
+}
+.loginButton {
+  background: linear-gradient(to right, #ff2721, #e87c1e);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 20px;
+  padding: 15px 20px;
+  border-radius: 50px;
 }
