--- a/src/App.css
+++ b/src/App.css
@@ -131,6 +131,16 @@ body {
   border-radius: 50px;
   color: black;
   font-weight: bold;
+  animation: example 1s infinite;
+  transition: all 0.3s ease-in-out;
+}
+@keyframes example {
+  from {
+    background: linear-gradient(to right, #ff2721, #e87c1e);
+  }
+  to {
+    background: linear-gradient(to left, #ff2721, #e87c1e);
+  }
 }
 
 /* collection card */
