--- a/src/App.css
+++ b/src/App.css
@@ -206,3 +206,30 @@ body {
 .punkList::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
+
+.main {
+  max-height: 50vh;
+}
+
+.mainContent {
+  display: flex;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #fff;
+}
+.punkHighlights {
+  flex: 0.25;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.punkContainer {
+  border-radius: 20px;
+  overflow: hidden;
+  display: flex;
+  margin-right: 20px;
+}
+.punkDetails {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
