punk list icon added

--- a/src/App.css
+++ b/src/App.css
@@ -233,3 +233,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
 }
+.main .punkImageLeft,
+.ownerImage {
+  width: 200px;
+}
